# PaperTodo

./: .gitignore  0001-fix-remove-note-image-render-markers.patch  AGENTS.md  AnimationHelper.cs  App.xaml  App.xaml.cs  AppController.Settings.cs  AppController.Shortcuts.cs  AppController.Tray.cs  AppController.cs  AppTypography.cs  CHANGELOG.md  ClipboardHelper.cs  DESIGNREADME.md  DeepCapsuleContextMenuSession.cs  DeepCapsuleDragWindow.cs  DeepCapsuleLayout.cs  EdgeCapsuleDragWindow.cs  EdgeCapsuleGeometry.cs  EdgeCapsuleHost.cs  EdgeCapsuleLayout.cs  EdgeCapsuleLayoutService.cs  EdgeCapsuleModel.cs  EdgeCapsulePresentation.cs  EdgeCapsulePresenter.cs  EdgeCapsuleReducer.cs  EdgeCapsuleTargetPlanner.cs  EdgeCapsuleTransitionPolicy.cs  FULL_AUDIT_PROGRESS.md  GlobalHotkeys.cs  LmdbImageDatabase.cs  LmdbNative.cs  MarkdownFencedCodeScanner.cs  MarkdownImageReferences.cs  MarkdownRenderer.cs  MarkdownTextBox.cs  MasterCapsuleWindow.cs  Models.cs  NoteImageStore.cs  NoteTypography.cs  (+33 more)
.github/workflows/: release.yml
Resources/: Strings.en.resx  Strings.ja.resx  Strings.ko.resx  Strings.resx
docs/: index.html
native/lmdb/: CMakeLists.txt  UPSTREAM_COMMIT  build.ps1  papertodo_lmdb.def
